[package]
name = "mesagisto-diagnose"
version = "1.0.0"
edition = "2021"

[features]
default = ["color"]
no-color = ["colored/no-color"]
color = ["tracing-subscriber/ansi"]

[dependencies]

mesagisto-client = { git = "https://github.com/MeowCat-Studio/mesagisto-client-rs.git", branch = "master" }
# mesagisto-client = { path = "/home/itsusinn/Workspace/Code/mesagisto/mesagisto-client/rust" }
base64-url = "1.4.13"
either = "1.7.0"
singleton = { git = "https://github.com/Itsusinn/singleton-rs.git", branch = "master"}
tokio = { version = "1.20.1", features = ["rt-multi-thread", "macros", "signal", "io-std"] }
futures-util = "0.3.21"
arcstr = "1.1.4"
once_cell = "1.13.0"
serde = "1.0.140"
serde_json = "1.0.87"
color-eyre = "0.6.2"
uuid = "1.2.1"
dashmap = "5.4.0"

# logging
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", default-features = false, features = ["tracing-log", "std", "local-time","fmt"] }
time = { version = "0.3.11", features = ["macros", "local-offset"] }
colored = "2.0.0"

[profile.release]
opt-level = 'z'
debug = 1
lto = true
incremental = false
codegen-units = 1
strip = true

[build-dependencies]
anyhow = "1.0.58"
fs_extra = "1.2.0"
glob = "0.3.0"
