[package]
name = "msgist-dc"
version = "1.4.5"

authors = ["Itsusinn <itsusinn@foxmail.com>"]
edition = "2021"

[package.metadata.i18n]
available-locales = ["en-US", "zh-CN"]
default-locale = "en-US"
load-path = "locales"

[features]
default = ["color"]
no-color = ["colored/no-color"]
color = ["tracing-subscriber/ansi"]

[dependencies]
serenity = "0.12.0"

# logging
tracing= "0.1.40"
tracing-subscriber = { version = "0.3.18", default-features = false, features = [ "tracing-log", "std", "local-time", "fmt"] }
colored = "2.1.0"

# asynchronous
futures-util = "0.3.25"
tokio = { version = "1.23.1", default-features = false, features = ["macros", "rt-multi-thread","signal"] }
reqwest = { version = "0.11.13", default-features = false, features = ["rustls","rustls-tls-native-roots"] }
sled = "0.34.7"

# tools
uuid = "1.2.2"
url = "2.3.1"
once_cell = "1.17.0"
dashmap = { version = "5.4.0", features = ["serde"] }
educe = { version = "0.5.11", default-features = false, features = ["Default"] }
arcstr = { version = "1.1.5", features = ["serde"] }
either = "1.8.0"
infer = "0.15.0"
yaml-rust = "0.4.5"
linked-hash-map = "0.5.6"
time = { version = "0.3.31", features = ["macros", "local-offset"] }
chrono = "0.4.23"

# error handling
thiserror = "1.0.56"
color-eyre = "0.6.2"

# encoding and decoding
base64-url = "2.0.2"

# serialization
serde = { version = "1.0.195", features = ["derive","rc"] }
serde_json = "1.0.111"
serde_yaml = "0.9.30"
ciborium = "0.2.1"

# mesagisto
mesagisto-client = { branch = "master", git = "https://github.com/MeowCat-Studio/mesagisto-client-rs.git"}
#mesagisto-client = { path = "../../mesagisto-client/rust" }

singleton = { branch = "master",git = "https://github.com/Itsusinn/singleton-rs.git" }
# singleton = { path = "/code/singleton-rs" }
lateinit = { branch = "master", git = "https://github.com/Itsusinn/lateinit-rs.git" }
self_update = { version = "0.39.0", default-features = false, features = ["archive-zip","compression-zip-deflate","rustls"] }
figment-wrapper = { branch = "master", git = "https://github.com/Itsusinn/figment-wrapper.git" }
figment = { version = "0.10.14", features = ["yaml"] }

# i18n
i18n-embed = { version = "0.14.1", features = ["fluent-system", "desktop-requester"]}
i18n-embed-fl = "0.7.0"
rust-embed = "8.2.0"
locale_config = "0.3.0"


[profile.release]
opt-level = 'z'
debug = 1
lto = true
incremental = false
codegen-units = 1
strip = "debuginfo"
