[package]
name = "msgist-onebot"
version = "0.1.0"
edition = "2021"

[features]
default = ["color"]
no-color = ["colored/no-color"]
color = ["tracing-subscriber/ansi"]

[dependencies]

# config
figment-wrapper = { branch = "master", git = "https://github.com/Itsusinn/figment-wrapper.git" }
figment = { version = "0.10", features = ["toml"] }
toml = "0.8"

reqwest = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
uuid = "1"


# error handling
thiserror = "1"
color-eyre = "0.6"
tracing-error = "0.2"
color-spantrace = "0.2"

# async
futures-util = "0.3"
tokio = { version = "1", features = ["macros","rt-multi-thread","io-std","signal"] }
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-native-roots"]}

# tools
dashmap = { version = "6", features = ["serde"] }
once_cell = "1"
educe = { version = "0.6", default-features = false, features = ["Default"] }
arcstr = { version = "1", features = ["serde"] }
lateinit = { branch = "master", git = "https://github.com/Itsusinn/lateinit-rs.git" }
singleton = { branch= "master", git = "https://github.com/Itsusinn/singleton-rs.git" }

mesagisto-client = { path = "../mesagisto-client-rs" }


# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["tracing-log", "std", "local-time","fmt"] }
colored = "2"
time = { version = "0.3", features = ["macros", "local-offset"] }
chrono = "0.4"

# walle-core = { path = "../walle-core", features = ["app-obc", "websocket", "tokio-rt"]}