[package]
name = "minecraft-message-source"
version = "0.1.0"
edition = "2021"

[features]
default = ["color"]
no-color = ["colored/no-color"]
color = ["tracing-subscriber/ansi"]


[dependencies]

# minecraft
steven_protocol = { path = "libs/stevenarella/protocol" }
rsa_public_encrypt_pkcs1 = "0.4.0"

# error-handling
tracing-error = "0.2.0"
color-spantrace = "0.2.0"

once_cell = "1.13.0"
rand = "0.8.5"
color-eyre = "0.6.2"
dptree = "0.3.0"
uuid = { version = "1.1.2", features = ["v4"] }

# logging
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.14", default-features = false, features = ["tracing-log", "std", "local-time","fmt"] }
colored = "2.0.0"
time = { version = "0.3.11", features = ["macros", "local-offset"] }
chrono = "0.4.19"

# asynchronous
tokio = { version = "1.20.0", default-features = false, features = ["macros","signal","rt-multi-thread"] }
tokio-util = "0.7.3"
tokio-stream = "0.1.9"
futures = "0.3.21"
async-trait = "0.1.56"
reqwest = "0.11.11"

# mesagisto
nats = { package = "async-nats", version = "0.17.0" }
mesagisto-client = { branch = "master", git = "https://github.com/MeowCat-Studio/mesagisto-client-rs.git" }
# mesagisto-client = { path = "../../mesagisto-client/rust" }
automatic-config = { branch = "master", git = "https://github.com/Itsusinn/automatic-config-rs.git" }
# automatic-config = { path = "/home/itsusinn/Workspace/Code/automatic-config-rs" }
lateinit = { branch = "master", git = "https://github.com/Itsusinn/lateinit-rs.git" }
singleton = { branch="master", git = "https://github.com/Itsusinn/singleton-rs.git" }
# singleton = { path = "/code/singleton-rs" }

[profile.dev]
split-debuginfo = "unpacked"
opt-level = 1
